添加 UI 控制层

--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/three": "^0.150.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "fast-check": "^3.13.0",
+    "jsdom": "^23.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "vitest": "^1.0.0",
-    "fast-check": "^3.13.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.1.0",
-    "jsdom": "^23.0.0"
+    "vitest": "^1.0.0"
   }
 }
